# neuro-otel-demo

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  plan.md
app/: pyproject.toml  pytest.ini  requirements.txt
app/neuro_preprocess/: __init__.py  cli.py  pipeline.py
app/neuro_preprocess.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
app/neuro_preprocess/stages/: __init__.py  loader.py  processor.py  writer.py
app/neuro_preprocess/telemetry/: __init__.py  logger_setup.py  metrics_setup.py  tracer_setup.py
app/neuro_preprocess/tests/: README.md  __init__.py  test_integration.py  test_loader.py  test_processor.py  test_writer.py
configs/: loki-config.yaml  otel-collector-config.yaml  prometheus.yml  tempo-config.yaml
containers/: Dockerfile.app  Dockerfile.grafana  Dockerfile.loki  Dockerfile.otel-collector  Dockerfile.prometheus  Dockerfile.tempo  build_all.sh
docs/: CUMULATIVE_DASHBOARD_GUIDE.md
layman_docs/: 00-glossary.md  01-overview.md  02-how-it-works.md  03-viewing-telemetry.md  04-creating-dashboards.md  05-troubleshooting.md
learn/: 00-learning-path.md  01-observability-fundamentals.md  02-opentelemetry-basics.md  03-distributed-tracing.md  04-metrics-deep-dive.md  05-structured-logging.md  06-prometheus-guide.md  07-loki-guide.md  08-tempo-guide.md  09-otel-collector.md  10-data-flow-explained.md  11-instrumentation-patterns.md  12-hands-on-exercises.md  13-production-practices.md  14-advanced-topics.md
scripts/: check_health.sh  generate_telemetry.sh  load_test.sh  run_demo.sh  start_stack.sh  (+1 more)
(+44 files in other folders)
